components/UI/ProjectCard/ProjectCard.module.css
.projectCard {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  min-height: 720px;
  background-color: var(--secondary-back);
  border: 1px solid var(--secondary-back-border);
  border-radius: 4px;
  overflow: hidden;
}

.imageWrapper {
  position: relative;
  border-radius: 4px 4px 0 0;
  border-bottom: 1px solid var(--border);
  width: 100%;
  aspect-ratio: 1/1;
  display: block;
  overflow: hidden;
}

.cardImage {
  object-fit: cover;
  width: 100%;
  height: 100%;
  display: block;
}

.labelWrapper {
  position: absolute;
  top: 18px;
  right: 10px;
  z-index: 2;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.labelType,
.labelProgress {
  font-size: 14px;
  padding: 4px 8px;
  border-radius: 50px;
  box-shadow: 0 2px 2px var(--highlight);
  text-transform: capitalize;
  text-align: center;
}

.labelType {
  color: var(--primary-btn-text);
  background-color: var(--accent);
  border: 1px solid var(--secondary-back-border);
}

.labelProgress {
  color: var(--foreground);
  background-color: var(--secondary-btn);
  border: 1px solid var(--secondary-back-border);
}

.iconsWrapper {
  position: absolute;
  top: 18px;
  left: 10px;
  z-index: 2;
  display: flex;
  gap: 8px;
  align-items: flex-start;
}

.iconLink {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 31px;
  height: 31px;
  aspect-ratio: 1 / 1;
  background-color: var(--secondary-btn);
  border: 1px solid var(--secondary-back-border);
  padding: 6px;
  border-radius: 50px;
  box-shadow: 0 2px 2px var(--highlight);
  transition:
    backround-color var(--transition),
    fill var(--transition);
}

.icon {
  fill: var(--icon);
}

.iconLink:focus-visible,
.iconLink:active {
  background-color: var(--hover-primary-btn);
  outline: none;
}

.projectInfoWrapper {
  display: flex;
  flex-direction: column;
  gap: 18px;
  padding: 24px;
  flex: 1;
}

.contentWrapper {
  display: flex;
  flex-direction: column;
  gap: 18px;
  flex: 1;
}

.tagList {
  margin-top: auto;
  display: flex;
  width: 100%;
  gap: 12px;
  align-items: center;
  justify-content: flex-start;
  flex-wrap: wrap;
}
.headingWrapper {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: space-between;
  gap: 18px;
}

.year {
  opacity: 0.7;
}

.heading {
  font-size: 24px;
}

.buttonWrapper {
  display: flex;
  flex-wrap: wrap;
  gap: 16px;
  width: 100%;
}

.buttonWrapper .btnLink {
  width: 100%;
}

.iconLink:focus-visible .icon,
.iconLink:active .icon {
  fill: var(--primary-btn-text);
}

@media (hover: hover) and (pointer: fine) {
  .iconLink:hover {
    background-color: var(--hover-primary-btn);
    fill: var(--secondary-btn-text);
  }
}

@media only screen and (min-width: 768px) {
  .labelWrapper,
  .iconsWrapper {
    right: 18px;
  }
  .iconLink {
    padding: 5px;
  }

  .projectCard {
    min-height: 759px;
  }
}

@media only screen and (min-width: 1440px) {
  .iconLink:hover .icon {
    fill: var(--primary-btn-text);
  }

  .projectCard {
    min-height: 844px;
  }
}

